--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url(/css/style.css);
 
 .container
 {
@@ -18,6 +17,33 @@
 
 }
 
+.gotas{
+    width: 20vw;
+    height: 25vw;
+    position: relative;
+    left: 35vw;
+    top: 8vw;
+    visibility: hidden;
+    animation: lluvia 10s linear infinite;
+}
+
+@keyframes lluvia {
+    40% {
+        visibility: hidden ; 
+    
+
+    }
+    50% {
+        visibility: visible ; 
+    
+
+    }
+    60% {
+        visibility: hidden; 
+    }
+}
+
+
 .nube{
     grid-row: 1;
     position: absolute;
@@ -29,15 +55,15 @@
     0% {
         right: -25vw;
     }
-    /* Primer segmento: Mueve la nube al centro */
+  
     45% {
-        right: calc(50% - 12.5vw); /* Centro de la pantalla */
+        right: calc(50% - 12.5vw); 
     }
-    /* Segundo segmento: Detiene la nube durante 5 segundos */
+    
     55% {
-        right: calc(50% - 12.5vw); /* Mantiene en el centro */
+        right: calc(50% - 12.5vw); 
     }
-    /* Tercer segmento: Mueve la nube hacia el final */
+    
     100% {
         right: 100vw;
     }
@@ -56,7 +82,20 @@
     left: 45vw;
     width: 10vw;
     
+    visibility: hidden; 
+    animation: aparecerFlor 10s linear infinite;
+    
 }
+
+@keyframes aparecerFlor {
+    55% {
+        visibility: hidden;
+    }
+    60% {
+        visibility: visible;
+    }
+}
+
 .arbol{
     grid-row: 1;
     position: absolute;
@@ -67,7 +106,7 @@
     grid-row: 1;
     position: absolute;
     right: 0;
-    animation: parpadeoSol 2s infinite alternate;
+    animation: parpadeoSol 6s infinite alternate;
 }
 @keyframes parpadeoSol{
     from {
@@ -85,7 +124,6 @@
     bottom: 5.5vw;
     grid-row: 2;
     height: 30vw;
-    border: 1px solid black;
     background-color: green;
     
     
